bad/assign_literal_string_class.example_compiler_output
ERROR
[1mbad/assign_literal_string_class.lat:6:8: [1;31merror: [0;1mleft side is not assignable[m
	"abc" = new Y;
	      [1;32m^[m
[1mbad/assign_literal_string_class.lat:6:6: [1;34mnote: [0;1mleft side starts here[m
	"abc" = new Y;
	    [1;32m^[m
